Package: listenv
================

Version: 0.7.0-9000 [2018-10-11]

BUG FIXES:

 * parse_env_subset(x[names]) on a listenv 'x' would throw an error on
   'length(x) = 2 > 1' in coercion to 'logical(1)' when length(names) > 1
    and _R_CHECK_LENGTH_1_LOGIC2_=true.

 * parse_env_subset(x[1,idxs]) on a listenv 'x' would throw an error on
   'length(x) = 2 > 1' in coercion to 'logical(1)' with length(idxs) > 1
   and _R_CHECK_LENGTH_1_LOGIC2_=true.

 * parse_env_subset(x[[1]]) on a regular environment 'x' would not throw
   an error, whereas x[[1]] would.

 * parse_env_subset(x[[names]]) on a regular environment 'x' with
   length(names) > 1 would not throw an error, whereas x[[names]] would.


Version: 0.7.0 [2018-01-21]

NEW FEATURES:

 * Now it is possible to set the dimension on an empty list environment without
   first resizing it with length(), e.g. x <- listenv(); dim(x) <- c(2, 3).

 * Now it is possible to remove multiple elements by assigning NULL, e.g.
   x[c(2:3, 10)] <- NULL and x[, "B"] <- NULL.

 * Added lengths() for list environments.  Requires R (>= 3.3.0).

 * dim_na(x) <- dims, where 'dims' contain exactly one missing value, will
   set the "missing" dimension based on the length of 'x' and the other
   dimensions specified, e.g. with length(x) == 6, dim_na(x) <- c(2, NA) will
   set dim(x) <- c(2, 3).  This works for all types of object to which
   dimensions can be assigned - not only list environments.

 * Added is.matrix(), is.array(), as.vector() and as.matrix() for list
   environments.

BUG FIXES:

 * print() on a named, empty list environment would output an empty string.
 
 * Removing an element from a list environment did not remove dimensions,
   e.g. x$a <- NULL.

DEPRECATED AND DEFUNCT:

 * Function map() has been renamed to mapping() and same for the corresponding
   replacement function.  The map() and map<-() functions will soon be
   deprecated and eventually defunct.
