@@ -5,6 +5,9 @@ Version: 0.7.0-9000 [2018-10-11]
 
 BUG FIXES:
 
+ * parse_env_subset(x[]) on a listenv 'x' would throw an error on
+   "Invalid subset: 'x[]'".
+
  * parse_env_subset(x[names]) on a listenv 'x' would throw an error on
    'length(x) = 2 > 1' in coercion to 'logical(1)' when length(names) > 1
     and _R_CHECK_LENGTH_1_LOGIC2_=true.
